[package]
name = "libfuzzer_webp"
version = "0.7.1"
authors = ["Alan Hawrelak <alangh@shaw.ca>"]
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }
num_cpus = "1.0"

[dependencies]
libafl = { version = "0.8.0", features = ["default"] }
libafl_targets = { version = "0.8.0", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }
# TODO Include it only when building cc
libafl_cc = { version = "0.8.0" }
mimalloc = { version = "*", default-features = false }

[lib]
name = "libfuzzer_webp"
crate-type = ["staticlib"]

